--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "main.html",
   "dependencies": {
     "bootstrap": "^4.0.0-alpha.6",
+    "datatables": "^1.10.18",
+    "dot": "^1.1.2",
     "flatpickr": "^3.0.7",
     "gulp": "^3.9.1",
     "jquery": "^3.2.1",
